# claude-switch-tui

./: .gitignore  Cargo.toml  README.md  backends.example.json  install.sh
src/: app.rs  checker.rs  config.rs  main.rs  tracker.rs  ui.rs
