[package]
name = "claude-switch"
version = "0.1.4"
edition = "2021"
description = "A small TUI for switching Claude Code backend environment variables."

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }

clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
